tests/negative/test_call_eval_arg_non_eval.orb
eval (fnc foo (x:i32) () {});

fnc main () () {
    sym (x:i32 0);
    foo x;
};